--- a/core/esmf-aspect-meta-model-python/pyproject.toml
+++ b/core/esmf-aspect-meta-model-python/pyproject.toml
@@ -23,8 +23,8 @@ black = "^22.6.0"
 types-requests = "^2.28.8"
 
 [tool.poetry.scripts]
-download-bamm-release = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_bamm_release:main"
-download-bamm-branch = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_bamm_branch:main"
+download-samm-release = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_samm_release:main"
+download-samm-branch = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_samm_branch:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
