--- a/.github/workflows/push_request_check.yml
+++ b/.github/workflows/push_request_check.yml
@@ -48,4 +48,4 @@ jobs:
       - name: run black
         uses: psf/black@stable
         with:
-          options: "--check --verbose --line-length=160"
+          options: "--check --line-length=160"
