--- a/core/esmf-aspect-meta-model-python/pyproject.toml
+++ b/core/esmf-aspect-meta-model-python/pyproject.toml
@@ -14,13 +14,22 @@ python = "^3.10"
 rdflib = "^6.2.0"
 zipfile37 = "^0.1.3"
 requests = "^2.28.1"
-
+tox = "^4.5.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.1"
-mypy = "^0.950"
 black = "^22.6.0"
-types-requests = "^2.28.8"
+coverage = "^7.2.5"
+flake8 = "^6.0.0"
+isort = "^5.12.0"
+mypy = "^1.3.0"
+pytest = "^7.1"
+pytest-cov = "^4.0.0"
+pytest-sugar = "^0.9.7"
+types-requests = "^2.30.0.0"
+
+
+[tool.pytest.ini_options]
+cache_dir = ".pytest_cache"
 
 [tool.poetry.scripts]
 download-samm-release = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_samm_release:main"
@@ -29,11 +38,3 @@ download-samm-branch = "esmf_aspect_meta_model_python.samm_aspect_meta_model.dow
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
-[tool.mypy]
-show_error_codes = true
-warn_unused_configs = true
-
-[[tool.mypy.overrides]]
-module = "esmf_aspect_meta_model_python.loader.*"
-ignore_errors = true
