Added code style check with flake8

--- a/core/esmf-aspect-meta-model-python/tox.ini
+++ b/core/esmf-aspect-meta-model-python/tox.ini
@@ -24,8 +24,7 @@ commands_pre = poetry install
 commands =
     poetry run black esmf_aspect_meta_model_python
     poetry run black tests
-;    poetry run flake8
-;    poetry run pycodestyle esmf_aspect_meta_model_python tests --show-source --max-line-length=120
+    poetry run flake8
 ;    poetry run isort --check-only --diff esmf_aspect_meta_model_python tests
 ;    poetry run mypy .
 
