Added typing check with mypy

--- a/core/esmf-aspect-meta-model-python/tox.ini
+++ b/core/esmf-aspect-meta-model-python/tox.ini
@@ -26,7 +26,7 @@ commands =
     poetry run black --line-length 160 tests
     poetry run flake8
     poetry run isort --check-only --diff esmf_aspect_meta_model_python tests
-;    poetry run mypy .
+    poetry run mypy .
 
 
 [flake8]
