Update workflow pipeline

--- a/.github/workflows/tagged_release.yml
+++ b/.github/workflows/tagged_release.yml
@@ -102,6 +102,13 @@ jobs:
             exit 1
           fi
 
+      - name: Set versions
+        continue-on-error: true
+        run: |
+          release_version=${{ github.event.inputs.release_version }}
+          release_branch_name=${release_version%.*}.x
+          echo "release_branch_name=$release_branch_name" >> $GITHUB_ENV
+
       - name: Set antora version
         run: yq eval -i '.version = "${{ github.event.inputs.release_version }}"' documentation/python-sdk-guide/antora.yml
 
@@ -113,12 +120,13 @@ jobs:
           echo "EsmfVersion=${{ github.event.inputs.release_version }}" >> $GITHUB_ENV
           echo "::set-output name=EsmfVersion::${{ github.event.inputs.release_version }}"
 
-      - name: Commit version changes
+      - name: Create a release branch
         run: |
+          git checkout -b ${{ env.release_branch_name }}
           git add documentation/python-sdk-guide/antora.yml
           git add core/esmf-aspect-meta-model-python/pyproject.toml
           git commit -m "Release version ${{steps.ESMF_version.outputs.EsmfVersion}}."
-          git push
+          git push --set-upstream origin ${{ env.release_branch_name }}
           tag_version=v${{ github.event.inputs.release_version }} 
           git tag $tag_version
           git push origin $tag_version
@@ -144,6 +152,8 @@ jobs:
 
       - name: Build and publish esmf-aspect-model-loader project
         run: |
+          git checkout ${{ env.release_branch_name }}
+          git status
           cd core/esmf-aspect-meta-model-python
           poetry install
           poetry run download-samm-release
