--- a/core/esmf-aspect-meta-model-python/pyproject.toml
+++ b/core/esmf-aspect-meta-model-python/pyproject.toml
@@ -49,6 +49,7 @@ cache_dir = ".pytest_cache"
 [tool.poetry.scripts]
 download-samm-release = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_samm_release:main"
 download-samm-branch = "esmf_aspect_meta_model_python.samm_aspect_meta_model.download_samm_branch:main"
+download-samm-cli = "scripts.download_samm_cli:download_samm_cli"
 
 [build-system]
 requires = ["poetry>=0.12"]
